[package]
name = "repakstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
const_format = "0.2.34"
humantime = "2.1.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = false
