[package]
name = "repakstrap"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
humantime = "2.2.0"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
termsize = "0.1.9"
tokio = { version = "1.44.2", features = ["rt"] }

[profile.release]
codegen-units = 1
lto = false
